Change url to query param for book apis (#364)
change url to query param for book apis
